scrollbar on preloader fixed

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,9 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
-
+html{
+  overflow: hidden;
+}
 .App {
   text-align: center;
   width: 100%;
